--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,81 @@
+@import "mapas.less";
+
+@breakPointMobile: ~"(max-width: 767px)";
+@breakPointTablet: ~"(min-width: 768px) and (max-width: 1023px)";
+
+.marginBottom8{
+    margin-bottom: 8px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
 body{
-    background-color: yellowgreen;
+    background-color: #colors[backgroundColor];
+    color: #colors[textColor];
+}
+
+.container{
+    max-width: 960px;//Lagura máxima do container
+    width: 100%;//O container ocupa todo o espaço disponível.
+    margin: 0 auto; //Centralizar conteúdo horizontalmente.
+    
+    @media @breakPointMobile{
+        max-width: 70%;
+    }
+
+    @media @breakPointTablet{
+        max-width: 80%;
+    }
+}
+
+header{
+    padding: 24px;
+
+    .profile-avatar{
+        display: block;
+        margin: 0 auto 24px;
+        border-radius: 100px;
+    }
+}
+
+.profile-bio{
+    text-align: center;
+    // .profile-bio-name
+    &-name{
+        font-size: 16px;
+        .marginBottom8();
+    }
+    
+    &-subtitle{
+        .marginBottom8();
+        font-size: 14px;
+    }
+
+    &-description{
+        font-size: 14px;
+        opacity: 0.7;
+    }
+}
+
+.social-links{
+    display: flex;
+    justify-content: space-between;
+    max-width: 240px;
+    width: 100%;
+    margin: 0 auto;
+    li{
+        list-style: none;
+
+        img{
+            transition: all ease .3s; //Efeito de transição mais suave da imagem.
+            &:hover{
+                transform: scale(1.3); //Definida escala de 130%, ou seja, 30% a mais no tamanho da imagem.
+            }
+        }
+    }
 }
